--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <header class="header">
                 <div class="header_wrapper">
                     <h1 class="header_title">
-                        <strong>Hi, my name is <em>Maria</em> </strong><br>
+                        <strong>Hi, my name is <em>Nikita</em> </strong><br>
                         a frontend developer.
                     </h1>
                     <div class="header__text">
